--- a/convert.html
+++ b/convert.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Convert font</title>
     <style>
+      @font-face {
+        font-family: 'S-CoreDream-4Regular';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-4Regular.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+      }
       * {
         box-sizing: border-box;
       }
@@ -14,18 +20,22 @@
         place-items: center;
         height: 90vh;
         font-size: 16px;
+        font-family: 'S-CoreDream-4Regular';
+        background-color: #ecf0f3;
       }
       .container {
-        width: 400px;
+        width: 380px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        padding: 30px 20px;
-        border: 1px solid;
+        padding: 30px;
         box-sizing: border-box;
+        border-radius: 30px;
+        background-color: #ecf0f3;
+        box-shadow: 13px 13px 20px #cdced1, -13px -13px 20px #fff;
       }
       h1 {
-        margin: 10px 0 20px 0;
+        margin: 10px 0 30px 0;
         font-size: 1.5em;
         text-align: center;
       }
@@ -36,19 +46,29 @@
       }
       label {
         margin-bottom: 5px;
-        font-size: 1.2em;
+        font-size: 1em;
       }
       input {
-        padding: 10px;
-        margin-bottom: 10px;
+        padding: 20px 10px 10px 15px;
+        margin-bottom: 20px;
         font-size: 1em;
+        border-radius: 15px;
+        box-shadow: inset 3px 3px 5px #cbced1, inset -5px -5px 5px #fff;
+        border: none;
+        outline: none;
+        background: rgb(247, 247, 247);
       }
       input[type='submit'] {
         margin: 10px 0 20px 0;
         padding: 10px;
+        color: #fff;
+        background-color: #09b2f0;
+        box-shadow: 3px 3px 8px #b1b1b1, -3px -3px 8px #fff;
       }
       .result_cont {
         padding: 20px;
+        border-radius: 15px;
+        box-shadow: inset 3px 3px 5px #cbced1, inset -5px -5px 5px #fff;
         background-color: #eee;
       }
       span {
@@ -63,12 +83,12 @@
     <div class="container">
       <h1>Convert Units</h1>
       <form>
-        <label for="base"> base size </label>
+        <label for="base"> Base size </label>
         <input class="base" type="number" min="1" placeholder="16px" required />
         <label for="PtoE"> Px to Em</label>
-        <input class="pte" type="number" min="1" step="0.1" placeholder="px" />
+        <input class="pte" type="number" min="1" step="0.1" placeholder="px to em" />
         <label for="EtoP"> Em to Px </label>
-        <input class="etp" type="number" step="0.1" />
+        <input class="etp" type="number" step="0.1" placeholder="em to px" / />
         <input class="submit" type="submit" value="Convert" />
       </form>
       <div class="result_cont">
